changed back-end file to respond with a more organized data response bus gaps modal now shows data correctly

--- a/client/components/linesBusesStyle.css
+++ b/client/components/linesBusesStyle.css
@@ -85,7 +85,7 @@ table.busTable thead th {
   border-bottom: 1px solid #FFA804;
 }
 
-/* table.busTable tbody {
+/* table.gapsModalTable tbody tr {
   border-bottom: 1px solid #FFA804;
 } */
 
